--- a/ParserExperiment/ParserExperiment.fsproj
+++ b/ParserExperiment/ParserExperiment.fsproj
@@ -14,6 +14,8 @@
     <Compile Include="Evaluation.fsi" />
     <Compile Include="Evaluation.fsi" /> 
     <Compile Include="Evaluation.fs" />
+    <Compile Include="Features.fsi" />
+    <Compile Include="Features.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
