--- a/ParserExperiment.Tests/ParserExperiment.CSharpTests.csproj
+++ b/ParserExperiment.Tests/ParserExperiment.CSharpTests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="FParsec.CSharp" Version="12.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
