--- a/ParserExperiment/ParserExperiment.fsproj
+++ b/ParserExperiment/ParserExperiment.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Internals.fs" />
     <Compile Include="Models.fs" />
     <Compile Include="Parsers.fsi" />
     <Compile Include="Parsers.fs" />
