--- a/YayysonParser.CSharpTests/YayysonParser.CSharpTests.csproj
+++ b/YayysonParser.CSharpTests/YayysonParser.CSharpTests.csproj
@@ -3,14 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
-    <RootNamespace>ParserExperiments.Tests</RootNamespace>
+    <RootNamespace>YayysonParser.Tests</RootNamespace>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
-    <PackageReference Include="FParsec.CSharp" Version="12.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -24,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ParserExperiment\ParserExperiment.fsproj" />
+    <ProjectReference Include="..\YayysonParser\YayysonParser.fsproj" />
   </ItemGroup>
 
 </Project>
